--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
   "homepage": "https://github.com/Mimir-Solutions/chains-ecosystem#readme",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^2.0.1",
+    "@nomiclabs/hardhat-ganache": "^2.0.0",
+    "@nomiclabs/hardhat-solhint": "^2.0.0",
+    "@nomiclabs/hardhat-solpp": "^2.0.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/buidler-upgrades": "^1.2.1",
+    "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "@openzeppelin/test-helpers": "^0.5.9",
+    "@openzeppelin/truffle-upgrades": "^1.2.4",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.2.0",
@@ -31,6 +38,7 @@
     "hardhat-gas-reporter": "^1.0.1",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
+    "solidity-coverage": "^0.7.12",
     "web3": "^1.3.0"
   },
   "dependencies": {
